--- a/CODE/flask_blog/templates/account.html
+++ b/CODE/flask_blog/templates/account.html
@@ -1,6 +1,9 @@
 {% extends "layout.html" %}
 {% block content %}
-    <div class="content-section">
+    <h1>Profile:</h1>
+{% endblock content %}
+
+<!-- <div class="content-section">
       <div class="media">
         <img class="rounded-circle account-img" src="{{ image_file }}">
         <div class="media-body">
@@ -53,5 +56,4 @@
                 {{ form.submit(class="btn btn-outline-info") }}
             </div>
         </form>
-    </div>
-{% endblock content %}
+    </div> -->
