--- a/CODE/flask_blog/templates/layout.html
+++ b/CODE/flask_blog/templates/layout.html
@@ -28,6 +28,7 @@
             <div class="navbar-nav mr-auto">
               <a class="nav-item nav-link" href="{{ url_for('home') }}">Home</a>
               <a class="nav-item nav-link" href="{{ url_for('about') }}">About</a>
+              <a class="nav-item nav-link" href="https://adityakalra581.github.io/Automated-fuel-stations/"target="_blank">Docs</a>
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
