--- a/CODE/flask_blog/templates/layout.html
+++ b/CODE/flask_blog/templates/layout.html
@@ -36,8 +36,27 @@
                 <a class="nav-item nav-link" href="{{ url_for('profile') }}">Profile</a>
                 <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
               {% else %}
-                <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
-                <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
+            </div>  
+            <div class="dropdown">
+              <button class="dropbtn">Login
+                <i class="fa fa-caret-down"></i>
+              </button>
+              <div class="dropdown-content">
+                <a class="nav-item nav-link" href="{{ url_for('login') }}">User Login</a>
+                <a class="nav-item nav-link" href="#">Admin Login</a>
+              </div>
+            </div>  
+                <!-- <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a> -->
+                <!-- <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a> -->
+              <div class="dropdown">
+                <button class="dropbtn">Register
+                  <i class="fa fa-caret-down"></i>
+                </button>
+              <div class="dropdown-content">
+                <a class="nav-item nav-link" href="{{ url_for('register') }}">User Register</a>
+                <a class="nav-item nav-link" href="#">Admin Register</a>
+              </div>
+            </div>  
               {% endif %}
             </div>
               <div class="dropdown">
