--- a/CODE/flask_blog/static/main.css
+++ b/CODE/flask_blog/static/main.css
@@ -95,6 +95,10 @@ a.article-title:hover {
  /* Important for vertical align on mobile phones */
 }
 
+.site-header .dropdown .dropbtn:hover {
+  color: #ffffff;
+}
+
 .navbar a:hover, .dropdown:hover .dropbtn {
   background-color: rgb(68, 172, 20);
 }
@@ -113,10 +117,10 @@ a.article-title:hover {
 .dropdown-content a {
   float: none;
   color: black;
-  padding: 20px 20px;
+  padding: 15px 20px;
   text-decoration: none;
   display: block;
-  text-align: right;
+  text-align: center;
 }
 
 /* Add a grey background color to dropdown links on hover */
@@ -128,4 +132,6 @@ a.article-title:hover {
 .dropdown:hover .dropdown-content {
   display: block;
 }
+
+
  
