--- a/flask_blog/templates/home.html
+++ b/flask_blog/templates/home.html
@@ -2,6 +2,11 @@
 {% block content %}
 <h1>WELCOME</h1>
 <br>
+<div class="media">
+    <img class="content-img" src="{{ image }}/logo.jpeg">
+</div>
+<br>
+<br>
 <h3>Getting Started:</h3>    
 <p>
     This website deal is created to rectify the issues faced by the 
@@ -54,6 +59,9 @@
             </ul> -->
         </div>
     </section>
+    <div class="media">
+        <img class="content-img" src="{{ image }}/cam.jpg">
+    </div>
 
 
 {% endblock content %}
