--- a/flask_blog/templates/layout.html
+++ b/flask_blog/templates/layout.html
@@ -11,16 +11,18 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
 
     {% if title %}
-        <title>MAJOR PROJECT - {{ title }}</title>
+        <title>QuickFuel - {{ title }}</title>
     {% else %}
-        <title>MAJOR PROJECT</title>
+        <title>QuickFuel</title>
     {% endif %}
 </head>
 <body>
     <header class="site-header">
       <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
         <div class="container">
-          <a class="navbar-brand mr-4" href="/">MAJOR PROJECT</a>
+          <a class="navbar-brand mr-4" href="/">QuickFuel</a>
+          <div class="media">
+        </div>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -66,7 +68,7 @@
                 <div class="dropdown-content">
                   <a href="#">Paper</a>
                   <a href="https://github.com/adityakalra581"target="_blank">Github</a>
-                  <a href="#">Contact</a>
+                  <a href="{{ url_for('contact') }}">Contact</a>
                   <a href="#">DOCS</a>
                 </div>
               </div>
@@ -105,6 +107,18 @@
         </div>
       </div>
     </main>
+    <div class="contact">
+      <h2></h2>
+      <div class="media">
+        <img class="content-img" src="{{ image }}/logo1.jpeg">
+    </div>
+      <p>QuickFuel is created as part of the Capstone project. 
+        This website here is created for educational purposes only 
+        and not for production.<br>
+        This site is created and maintained 
+        by <a href="https://adityakalra581.github.io/ak/">Aditya Kalra.</a></p>
+    </div>
+   
 
 
     <!-- Optional JavaScript -->
