--- a/flask_blog/templates/profile.html
+++ b/flask_blog/templates/profile.html
@@ -55,5 +55,16 @@
                 </div>
             </form>
     </div>
+    <dl>
+        <dt>
+          Average Waiting Time
+        </dt>
+        <dd class="percentage percentage-11"><span class="text">Fuel or Diesel</span></dd>
+        <dd class="percentage percentage-49"><span class="text">CNG</span></dd>
+        <!-- <dd class="percentage percentage-16"><span class="text">Firefox: 16.09%</span></dd>
+        <dd class="percentage percentage-5"><span class="text">Safari: 5.41%</span></dd>
+        <dd class="percentage percentage-2"><span class="text">Opera: 1.62%</span></dd>
+        <dd class="percentage percentage-2"><span class="text">Android 4.4: 2%</span></dd> -->
+      </dl>
 {% endblock content %}
 
