--- a/flask_blog/templates/stations.html
+++ b/flask_blog/templates/stations.html
@@ -14,6 +14,7 @@
      <table class="minimalistBlack">
       <thead>
       <tr>
+      <th>ID</th>  
       <th>NAME</th>
       <th>ADDRESS</th>
       <th>STATE</th>
@@ -26,8 +27,8 @@
       <td>foot1</td>
       <td>foot2</td>
       <td>foot3</td>
-      <!-- <td>foot4</td>
-      <td>foot5</td> -->
+      <td>foot4</td>
+      <!-- <td>foot5</td>  -->
       </tr>
       </tfoot>
       <tbody>
@@ -35,6 +36,9 @@
       <tr>
         {% for i in query %}
         <tr>
+          <td>
+            {{ i.id }}
+          </td>
           <td>
             {{ i.name }}
           </td>
