--- a/flask_blog/templates/contact.html
+++ b/flask_blog/templates/contact.html
@@ -1,19 +1,28 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class="content-section">
-    <h2>Reach out to us!!</h2>
-    <br>
-    <p>If you have any doubts, concerns and curious questions about this project 
-    reach out at the following platforms.</p>
-    <br>
-    <ul>
-        <b><li>Linkedin: </b><a href="https://www.linkedin.com/in/aditya-kalra-537a06197/">@aditya-kalra-537a06197</a>
-        <br>
-        <br>    
-        <b><li>GitHub: </b><a href="https://github.com/adityakalra581">@adityakalra581</a>
-        <br>
-        <br>    
-        <b><li>Gmail:</b> adityakalra781@gmail.com</li>        
-    </ul>    
+<section class="section-1 py-5">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8">
+                <p class="py-sm-3 mt-sm-3 lead">
+                <h2>Reach out to us!!</h2>
+                <br>
+                <p>If you have any doubts, concerns and curious questions about this project 
+                reach out at the following platforms.</p>
+                <br>
+                <ul>
+                    <b><li>Linkedin: </b><a href="https://www.linkedin.com/in/aditya-kalra-537a06197/">@aditya-kalra-537a06197</a>
+                    <br>
+                    <br>    
+                    <b><li>GitHub: </b><a href="https://github.com/adityakalra581">@adityakalra581</a>
+                    <br>
+                    <br>    
+                    <b><li>Gmail:</b> adityakalra781@gmail.com</li>        
+                </ul>
+            </p>
+        </div>
+    </div>
 </div>
+</section>     
+
 {% endblock content %}
