--- a/flask_blog/templates/profile.html
+++ b/flask_blog/templates/profile.html
@@ -1,70 +1,111 @@
 {% extends "layout.html" %}
 {% block content %}
-    <div class="content-section">
-        <div class="media">
-          <img class="rounded-circle account-img" src="{{ image_file }}">
-          <div class="media-body">
-            <h2 class="account-heading">{{ current_user.username }}</h2>
-            <p class="text-secondary">{{ current_user.email }}</p>
-          </div>
-        </div>
-            <form method="POST" action="" enctype="multipart/form-data">      
-                <!-- enctype here is specifically used for passing image correctly -->
-                {{ form.hidden_tag() }}
-                <fieldset class="form-group">
-                    <legend class="border-bottom mb-4">Profile Info</legend>
-                    <div class="form-group">
-                        {{ form.username.label(class="form-control-label") }}
-    
-                        {% if form.username.errors %}
-                            {{ form.username(class="form-control form-control-lg is-invalid") }}
-                            <div class="invalid-feedback">
-                                {% for error in form.username.errors %}
-                                    <span>{{ error }}</span>
-                                {% endfor %}
-                            </div>
-                        {% else %}
-                            {{ form.username(class="form-control form-control-lg") }}
-                        {% endif %}
+    <div class="container py-5">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card p-3 mb-sm-4 mb-1">
+                    <div class="profile text-center mx-auto mb-3">
+                        <img class="img-fluid" src="{{ image_file }}">
                     </div>
-                    <div class="form-group">
-                        {{ form.email.label(class="form-control-label") }}
-                        {% if form.email.errors %}
-                            {{ form.email(class="form-control form-control-lg is-invalid") }}
-                            <div class="invalid-feedback">
-                                {% for error in form.email.errors %}
-                                    <span>{{ error }}</span>
-                                {% endfor %}
-                            </div>
-                        {% else %}
-                            {{ form.email(class="form-control form-control-lg") }}
-                        {% endif %}
-                    </div>
-                    <div class="form-group">
-                        {{ form.picture.label() }}
-                        {{ form.picture(class="form-control-file") }}
-                        {% if form.picture.errors %}
-                            {% for error in form.picture.errors %}
-                                <span class="text-danger">{{ error }}</span></br>
-                            {% endfor %}
-                        {% endif %}
-                    </div>
-                </fieldset>
-                <div class="form-group">
-                    {{ form.submit(class="btn btn-outline-info") }}
+                    <h2 class="h4 text-center text-capitalize">{{ current_user.username }}</h2>
+                    <ul class="list-group list-group-flush  profile-info">
+                        <li class="list-group-item" data-toggle="tooltip" data-placement="right" title="Registered Email"><img class="img-fluid" src="{{ image }}/mail_icon.png"> {{ current_user.email }}</li>
+                        <li class="list-group-item" data-toggle="tooltip" data-placement="right" title="Registered Contact"><img class="img-fluid" src="{{ image }}/phone.png"> {{ current_user.mobile }}</li>
+                        <li class="list-group-item" data-toggle="tooltip" data-placement="right" title="Aadhar ID"><img class="img-fluid" src="{{ image }}/aadhar.png"> {{ current_user.aadhar_num }}</li>
+                    </ul>
                 </div>
-            </form>
+            </div>
+            <div class="col-md-8">
+                <div class="card mb-sm-2 mb-1">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item d-flex justify-content-between align-items-center active">
+                            <p class="h3">Fuel Stations Visited</p>
+                        </li>
+                        <li class="list-group-item d-flex justify-content-between align-items-center" data-toggle="tooltip" data-placement="right" title="In Kilograms">
+                            Station Name
+                        <span class="badge badge-primary badge-pill">{{ current_user.consumption }}</span>
+                        </li>
+                        <li class="list-group-item d-flex justify-content-between align-items-center" data-toggle="tooltip" data-placement="right" title="In Kilograms">
+                            Fuel Amount
+                        <span class="badge badge-primary badge-pill">{{ current_user.initial_volume }}</span>
+                        </li>
+                        <li class="list-group-item d-flex justify-content-between align-items-center" data-toggle="tooltip" data-placement="right" title="In Kilograms">
+                            Fuel Price
+                        <span class="badge badge-primary badge-pill">{{ current_user.final_volume }}</span>
+                        </li>
+                        <!-- <li class="list-group-item d-flex justify-content-between align-items-center" data-toggle="tooltip" data-placement="right" title="In INR">
+                            
+                        <span class="badge badge-primary badge-pill">{{ current_user.recharge }}</span>
+                        </li> -->
+                    </ul>
+                </div>
+                <br/>
+            </div>
+            <div class="col-md-12">
+                <div class="card">
+                    <div class="card-header">
+                        <h2 class="h1">Update Profile</h2>
+                    </div>
+                    <div class="card-body">
+                        <form method="POST" action="" enctype="multipart/form-data">
+                            <!-- enctype here is specifically used for passing image correctly -->
+                            {{ form.hidden_tag() }}
+                            <div class="form-group">
+                                {{ form.username.label(class="form-control-label") }}
+
+                                {% if form.username.errors %}
+                                    {{ form.username(class="form-control form-control-lg is-invalid") }}
+                                    <div class="invalid-feedback">
+                                        {% for error in form.username.errors %}
+                                            <span>{{ error }}</span>
+                                        {% endfor %}
+                                    </div>
+                                {% else %}
+                                    {{ form.username(class="form-control form-control-lg") }}
+                                {% endif %}
+                            </div>
+                            <div class="form-group">
+                                {{ form.email.label(class="form-control-label") }}
+                                {% if form.email.errors %}
+                                    {{ form.email(class="form-control form-control-lg is-invalid") }}
+                                    <div class="invalid-feedback">
+                                        {% for error in form.email.errors %}
+                                            <span>{{ error }}</span>
+                                        {% endfor %}
+                                    </div>
+                                {% else %}
+                                    {{ form.email(class="form-control form-control-lg") }}
+                                {% endif %}
+                            </div>
+                            <div class="form-group">
+                                {{ form.picture.label() }}
+                                {{ form.picture(class="form-control-file") }}
+                                {% if form.picture.errors %}
+                                    {% for error in form.picture.errors %}
+                                        <span class="text-danger">{{ error }}</span></br>
+                                    {% endfor %}
+                                {% endif %}
+                            </div>
+                            <div class="form-group text-right">
+                                {{ form.submit(class="btn btn-primary") }}
+                            </div>
+                        </form>
+                    </div>
+                    <!-- <div class="card-footer"></div> -->
+                </div>
+            </div>
+        </div>
     </div>
-    <dl>
+
+    <!-- <dl>
         <dt>
           Average Waiting Time
         </dt>
         <dd class="percentage percentage-11"><span class="text">Fuel or Diesel</span></dd>
         <dd class="percentage percentage-49"><span class="text">CNG</span></dd>
-        <!-- <dd class="percentage percentage-16"><span class="text">Firefox: 16.09%</span></dd>
+        <dd class="percentage percentage-16"><span class="text">Firefox: 16.09%</span></dd>
         <dd class="percentage percentage-5"><span class="text">Safari: 5.41%</span></dd>
         <dd class="percentage percentage-2"><span class="text">Opera: 1.62%</span></dd>
-        <dd class="percentage percentage-2"><span class="text">Android 4.4: 2%</span></dd> -->
-      </dl>
+        <dd class="percentage percentage-2"><span class="text">Android 4.4: 2%</span></dd>
+      </dl> -->
 {% endblock content %}
-
