Home and credits page updated

--- a/flask_blog/templates/home.html
+++ b/flask_blog/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-<!-- <img class="img-fluid w-100" src="{{ image }}/hero-homepage.png"> -->
+<img class="img-fluid w-100" src="{{ image }}/home.jpg">
 
 <section class="section-1 py-5">
     <div class="container">
@@ -11,12 +11,12 @@
             <div class="col-md-8">
                 <p class="py-sm-3 mt-sm-3 lead">
                     <span class="blue">Quick</span><span class="yellow">Fuel</span>
-                    is a smart regulator to be fitted on LPG cylinder
-                    which allows users to pay and use LPG gas in small portions.
-                    You can recharge gas cylinder for small amount instead of
-                    paying for the entire cylinder upfront and can keep a track of
-                    gas available in the cylinder. The device will also initiate
-                    automatic booking with your permission.
+                    incorporates two major revenue generating industries, first one is
+                    Automobile and the second one is Oil and Gas industry. The project is a proposal
+                    on how Indian petroleum pumps should structure their customer serving for optimal
+                    customer experience.Indian petrol pumps which are situated in high profile areas 
+                    are almost overcrowded every time and those which are present in remote areas are
+                    not even making enough revenue for their survival.
                 </p>
             </div>
         </div>
@@ -57,7 +57,7 @@
                     <div class="col-sm-6">
                         <div class="features card p-2 shadow-sm border-0 mb-3 mb-sm-0">
                             <img class="img-fluid mx-auto my-3" src="{{ image }}/2.detect-leakage.png">
-                            <p class="caption">Detect Leakage</p>
+                            <p class="caption">Customer Experience</p>
                         </div>
                     </div>
                 </div>
