--- a/flask_blog/templates/layout.html
+++ b/flask_blog/templates/layout.html
@@ -96,10 +96,13 @@
             </button>
             <div class="dropdown-menu">
               <a class="dropdown-item" href="{{ url_for('contact') }}">Contact</a>
-              <a class="dropdown-item" href="https://github.com/adityakalra581">Github</a>
-              <a class="dropdown-item" href="https://adityakalra581.github.io/Automated-fuel-stations/">Docs</a>
+              <a class="dropdown-item" href="https://github.com/adityakalra581"target="_blank">Github</a>
+              <a class="dropdown-item" href="https://adityakalra581.github.io/Automated-fuel-stations/"target="_blank">Docs</a>
+              <a class="dropdown-item" href="https://drive.google.com/file/d/1dgTWr9Ci-2FbUmWPSQpOLiW9ZqSsEg-i/view?usp=sharing"target="_blank">Report</a>
+              <a class="dropdown-item" href="https://drive.google.com/file/d/1UKfePXizpPnaReIHfVy6JC97-FT2mB-e/view?usp=sharing"target="_blank">Paper</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Paper</a>
+              <a class="dropdown-item" href="{{ url_for('credit') }}">Credits</a>
+
             </div>
           </div>
           <div class="header-additional-icon d-none d-sm-block">
