--- a/flask_blog/templates/layout.html
+++ b/flask_blog/templates/layout.html
@@ -63,7 +63,7 @@
   <nav class="navbar navbar-light navbar-expand-md bg-white w-100">
     <div class="container">
       <a class="navbar-brand mr-4" href="/">
-        <!-- <img src="{{ image }}/logo.png" class="img-fluid"> -->
+        <img src="{{ image }}/final-logo2.png" class="img-fluid">
       </a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
@@ -73,7 +73,6 @@
           <div class="navbar-nav mr-auto">
             <a class="nav-item nav-link" href="{{ url_for('home') }}">Home</a>
             <a class="nav-item nav-link" href="{{ url_for('about') }}">About</a>
-            <a data-toggle="tooltip" data-placement="right" title="Coming soon" class="nav-item nav-link" href="#!">Get App</a>
           </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
@@ -98,15 +97,12 @@
               <a class="dropdown-item" href="{{ url_for('contact') }}">Contact</a>
               <a class="dropdown-item" href="https://github.com/adityakalra581"target="_blank">Github</a>
               <a class="dropdown-item" href="https://adityakalra581.github.io/Automated-fuel-stations/"target="_blank">Docs</a>
-              <a class="dropdown-item" href="https://drive.google.com/file/d/1dgTWr9Ci-2FbUmWPSQpOLiW9ZqSsEg-i/view?usp=sharing"target="_blank">Report</a>
+              <a class="dropdown-item" href="https://drive.google.com/file/d/1dgTWr9Ci-2FbUmWPSQpOLiW9ZqSsEg-i/view?usp=sharing"target="_blank">Project Report</a>
               <a class="dropdown-item" href="https://drive.google.com/file/d/1UKfePXizpPnaReIHfVy6JC97-FT2mB-e/view?usp=sharing"target="_blank">Paper</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="{{ url_for('credit') }}">Credits</a>
 
             </div>
-          </div>
-          <div class="header-additional-icon d-none d-sm-block">
-            <img src="{{ image }}/Bharat_Petroleum-Logo.png" class="img-fluid">
           </div>
         </div>
       </div>
